--- a/khanhacks/package.json
+++ b/khanhacks/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/blob": "^0.23.3",
     "@vercel/postgres": "^0.8.0",
     "next": "14.2.3",
     "node-tesseract-ocr": "^2.2.1",
     "openai": "^4.49.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-highlight-words": "^0.20.0",
     "react-webcam": "^7.2.0",
     "tesseract.js": "^5.1.0"
   },
