--- a/khanhacks/package.json
+++ b/khanhacks/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
     "react-webcam": "^7.2.0",
+    "sharp": "^0.33.4",
     "tesseract.js": "^5.1.0"
   },
   "devDependencies": {
