--- a/khanhacks/package.json
+++ b/khanhacks/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/blob": "^0.23.3",
     "@vercel/postgres": "^0.8.0",
+    "iink-ts": "^1.0.5",
     "next": "14.2.3",
     "node-tesseract-ocr": "^2.2.1",
     "openai": "^4.49.1",
